kube/islb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islb
spec:
  selector:
    matchLabels:
      name: islb
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: islb
        app: islb
    spec:
      containers:
      - name: islb
        image: pionwebrtc/ion-islb:0.2.0
        command: ["/usr/local/bin/islb", "-c", "/configs/islb.toml"]
        resources:
          requests:
            cpu: 250m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - name: config-volume
          mountPath: /configs/
        
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: ion-config
