kube/biz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: biz
spec:
  type: ClusterIP
  ports:
  - name: biz
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: biz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biz
spec:
  selector:
    matchLabels:
      name: biz
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: biz
        app: biz
    spec:
      containers:
      - name: biz
        image: pionwebrtc/ion-biz:0.2.0
        command: ["/usr/local/bin/biz", "-c", "/configs/biz.toml"]
        resources:
          requests:
            cpu: 250m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - name: config-volume
          mountPath: /configs/
        ports:
        - name: biz
          containerPort: 8443
          protocol: TCP
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: ion-config
