kube/web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      name: web
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        name: web
        app: web
    spec:
      containers:
      - name: web
        image: pionwebrtc/ion-web:latest
        command: ["caddy", "file-server", "--listen", ":80", "-root", "/app/dist"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/caddy/
        ports:
        - name: web
          containerPort: 80
          protocol: TCP
      volumes:
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: ion-config
