kube/ingress.yaml
# Source: gitlab/charts/gitlab/charts/unicorn/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ion-app-web
  labels:
    app: ingress-ion-app-web
    
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    
spec:
  rules:
    - host: ion.streamhuddle.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 80
          - path: /ws
            backend:
              serviceName: biz
              servicePort: 8443
  tls:
    - hosts:
      - ion.streamhuddle.com
      secretName: ion-streamhuddle-tls
